<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="6"
    android:columnCount="4"
    android:orientation="horizontal"
    android:background="@color/black"
    android:id="@+id/suma">

<!--    Resultados-->
    <TextView
        android:layout_columnWeight="4"
        android:text="@string/result"
        android:textAlignment="textEnd"
        android:backgroundTint="@color/black"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:layout_columnSpan="4"
        android:layout_marginBottom="15sp"
        android:id="@+id/txtResult"
        android:inputType="number"
        android:layout_marginEnd="10sp"/>

<!--    Primera fila-->
    <Button
        android:id="@+id/ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:backgroundTint="@color/gray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/masmenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masmenos"
        android:backgroundTint="@color/gray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/porcentaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/porcentage"
        android:backgroundTint="@color/gray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:backgroundTint="@color/orange"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>

<!--Segunda fila-->
    <Button
        android:id="@+id/siete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_seven"
        android:backgroundTint="@color/lightgray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/ocho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_eight"
        android:backgroundTint="@color/lightgray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/nueve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_nine"
        android:backgroundTint="@color/lightgray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:backgroundTint="@color/orange"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>

<!--Tercera fila-->
    <Button
        android:id="@+id/cuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_four"
        android:backgroundTint="@color/lightgray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/cinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_five"
        android:backgroundTint="@color/lightgray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/seis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_six"
        android:backgroundTint="@color/lightgray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/menos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:backgroundTint="@color/orange"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>

<!--Cuarta fila-->
    <Button
        android:id="@+id/uno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_one"
        android:backgroundTint="@color/lightgray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/dos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_two"
        android:backgroundTint="@color/lightgray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/tres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_three"
        android:backgroundTint="@color/lightgray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>
    <Button
        android:id="@+id/mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:backgroundTint="@color/orange"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:padding="30sp"/>

<!--    Cuarta quinta-->
    <Button
        android:id="@+id/cero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_zero"
        android:backgroundTint="@color/lightgray"
        android:textSize="25sp"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:padding="30sp"/>

    <Button
        android:id="@+id/punto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/lightgray"
        android:text="@string/point"
        android:textSize="25sp"
        android:padding="30sp"/>
    <Button
        android:id="@+id/igual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/orange"
        android:padding="30sp"
        android:text="@string/equals"
        android:textSize="25sp" />

    </GridLayout>